Homework Web-Server-Beatles

--- a/03-WebServer/homework/Beatles/index.html
+++ b/03-WebServer/homework/Beatles/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="with=device-width, intial-scale=1">
+        <title>Beatles Demo</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="jumbotron">
+            <h1 class="display-4">Hello, Beatles!</h1>
+            <p class="lead">Vamos a mostrar algunos escarabajos...</p>
+            <hr class="my-4">
+            <p></p>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="http://localhost:3001/api" role="button">Learn more</a>
+            </p>
+          </div>
+    </body>
+</html>
